Fixed modal overflow, added welcome message & zoom disclaimer, & more

--- a/src/styles/less/floodtools.less
+++ b/src/styles/less/floodtools.less
@@ -20,9 +20,13 @@
     display: flex;
     min-width: 300px;
     height: 400px;
-    min-width: 500px !important;
+    min-width: none !important;
     box-sizing: border-box;
     padding: 0 0 15px 0;
+
+    @media (max-width: 550px) {
+        min-width: none;
+    }
 
     // Flood level sliders
     // Flood level sliders
