--- a/src/styles/less/modals.less
+++ b/src/styles/less/modals.less
@@ -5,6 +5,7 @@
 
 // Regular modal
 .modal{
+    background-color: fade(@black, 25%);
 
     .modal-dialog{
         padding-top: 10vh !important;
@@ -53,6 +54,7 @@
             .modal-body{
                 display: flex;
                 flex-direction: column;
+                overflow: auto;
 
                 .nav-tabs{
                     box-sizing: border-box;
